--- a/sources/common.css
+++ b/sources/common.css
@@ -1,6 +1,13 @@
-body{margin:40px
-auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
-10px;font-family: Arial, Helvetica, sans-serif;}
+body{
+	margin:5% auto;max-width:73%;
+	line-height:1.6;font-size:18px;
+	color:#444;
+	background: #f8f8f8;
+	padding:0 10px;
+        font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial;
+	text-shadow: 0 1px 0 #ffffff;
+}
+
 h1,h2,h3{line-height:1.2}
 table {
   border-collapse: collapse;
